AJS-449 AJS-449 active style fixes AJS-456 toolbar wrapping improvement
git-svn-id: https://studio.atlassian.com/svn/AJS/trunk@64758 2c54a935-e501-0410-bc05-97a93f6bca70

--- a/auiplugin/src/main/resources/css/atlassian/ie/toolbar-ie.css
+++ b/auiplugin/src/main/resources/css/atlassian/ie/toolbar-ie.css
@@ -29,3 +29,16 @@
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /*IE8*/
     filter: alpha(opacity=50); /* IE6-7 */
 }
+
+
+
+
+*+ html .aui-toolbar .toolbar-group {
+    padding-bottom: 10px;
+}
+
+*+ html .aui-toolbar .toolbar-item,
+*+ html .aui-toolbar .toolbar-trigger,
+*+ html .aui-toolbar .toolbar-trigger span {
+    white-space: nowrap;
+}
